src/objects/FDPCourseCancel__c.object
<CustomObject>
    <description>Cancellation of registered courses. used for import from oracle.</description>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermCode__c</fullName>
        <label>Term Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uniqueid__c</fullName>
        <externalId>true</externalId>
        <label>uniqueid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>FDP Course Cancel</label>
    <nameField>
        <label>FDPCourseCancel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FDP Course Cancels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>